--- a/content/blog/2019-11-05-october-19-dvc-heartbeat.mdx
+++ b/content/blog/2019-11-05-october-19-dvc-heartbeat.mdx
@@ -20,6 +20,8 @@ tags:
   - DVC
 ---
 
+import { ExternalLink } from "../../src/components/external-link";
+
 ## News and links
 
 Autumn is a great season for new beginnings and there is so much we love about
@@ -60,7 +62,7 @@ it this year. Here are some of the highlights:
 - Seeing [Dmitry Petrov](https://twitter.com/FullStackML) being really happy one
   day:
 
-<blockquote class="twitter-tweet" data-lang="en" data-dnt="true" data-theme="light"><p lang="en" dir="ltr">.<a href="https://twitter.com/martinfowler?ref_src=twsrc%5Etfw">@martinfowler</a>&#39;s books and his website were always the source of programming wisdom 💎 His Refactoring book is the first book I recommend to developers.<br><br>Now they write about ML lifecycle and automation. I’m especially excited because they use <a href="https://twitter.com/DVCorg?ref_src=twsrc%5Etfw">@DVCorg</a> that we’ve created. <a href="https://t.co/HwswZqjOsb">https://t.co/HwswZqjOsb</a></p>&mdash; Dmitry Petrov (@FullStackML) <a href="https://twitter.com/FullStackML/status/1169403554290814976?ref_src=twsrc%5Etfw">September 5, 2019</a></blockquote>
+<blockquote class="twitter-tweet" data-lang="en" data-dnt="true" data-theme="light"><p lang="en" dir="ltr">.<a href="https://twitter.com/martinfowler?ref_src=twsrc%5Etfw">@martinfowler</a>&#39;s books and his website were always the source of programming wisdom 💎 His Refactoring book is the first book I recommend to developers.<br /><br />Now they write about ML lifecycle and automation. I’m especially excited because they use <a href="https://twitter.com/DVCorg?ref_src=twsrc%5Etfw">@DVCorg</a> that we’ve created. <a href="https://t.co/HwswZqjOsb">https://t.co/HwswZqjOsb</a></p>&mdash; Dmitry Petrov (@FullStackML) <a href="https://twitter.com/FullStackML/status/1169403554290814976?ref_src=twsrc%5Etfw">September 5, 2019</a></blockquote>
 
 <hr />
 
@@ -80,18 +82,13 @@ Here are some of the links that caught our eye past month:
 > practices from Continuous Delivery, we can better manage the risks of
 > releasing changes to Machine Learning applications in a safe and reliable way.
 
-<a href="https://martinfowler.com/articles/cd4ml.html" class="external-link-preview">
-  <section class="elp-content-holder">
-    <div class="elp-description-holder">
-      <h4 class="elp-title">Continuous Delivery for Machine Learning</h4>
-      <div class="elp-description">bio I am a consultant at ThoughtWorks Germany, where I am leading our data and machine learning activities. I enjoy…</div>
-      <div class="elp-link">martinfowler.com</div>
-    </div>
-    <div class="elp-image-holder">
-      <img src="/uploads/images/2019-11-05/continuous-delivery-for-machine-learning.png" />
-    </div>
-  </section>
-</a>
+<ExternalLink
+  href="https://martinfowler.com/articles/cd4ml.html"
+  title="Continuous Delivery for Machine Learning"
+  description="bio I am a consultant at ThoughtWorks Germany, where I am leading our data and machine learning activities. I enjoy…"
+  name="martinfowler.com"
+  picture="/uploads/images/2019-11-05/continuous-delivery-for-machine-learning.png" 
+/>
 
 - **[The Path to Identity Validation](https://medium.com/signaturit-tech-blog/the-path-to-identity-validation-2-3-4f698b2ffae9)
   by [Víctor Segura](https://medium.com/@victor.segura).**
@@ -101,18 +98,13 @@ Here are some of the links that caught our eye past month:
 > to build the machine learning ecosystem to train our models efficiently and
 > not die trying? At **Signaturit**, we have the solution ;)
 
-<a href="https://medium.com/signaturit-tech-blog/the-path-to-identity-validation-2-3-4f698b2ffae9" class="external-link-preview">
-  <section class="elp-content-holder">
-    <div class="elp-description-holder">
-      <h4 class="elp-title">The Path to Identity Validation (2/3)</h4>
-      <div class="elp-description">How to start your own machine learning project?</div>
-      <div class="elp-link">medium.com</div>
-    </div>
-    <div class="elp-image-holder">
-      <img src="/uploads/images/2019-11-05/the-path-to-identity-validation.jpeg" />
-    </div>
-  </section>
-</a>
+<ExternalLink
+  href="https://medium.com/signaturit-tech-blog/the-path-to-identity-validation-2-3-4f698b2ffae9"
+  title="The Path to Identity Validation (2/3)"
+  description="How to start your own machine learning project?"
+  name="medium.com"
+  picture="/uploads/images/2019-11-05/the-path-to-identity-validation.jpeg" 
+/>
 
 - **Talk:
   [Managing Big Data in Machine Learning projects](https://pretalx.com/pyconuk-2019/talk/GCLBFH/)
@@ -138,18 +130,13 @@ Here are some of the links that caught our eye past month:
 > tracking used to look like, the current Weights & Biases business success
 > strategy, and what his team is working on today.
 
-<a href="https://twimlai.com/twiml-talk-295-managing-deep-learning-experiments-with-lukas-biewald/" class="external-link-preview">
-  <section class="elp-content-holder">
-    <div class="elp-description-holder">
-      <h4 class="elp-title">Managing Deep Learning Experiments with Lukas Biewald — Talk #295</h4>
-      <div class="elp-description">Today we are joined by Lukas Biewald, CEO and Co-Founder of Weights & Biases. Lukas, previously CEO and Founder of…</div>
-      <div class="elp-link">twimlai.com</div>
-    </div>
-    <div class="elp-image-holder">
-      <img src="/uploads/images/2019-11-05/managing-deep-learning-experiments.jpeg" />
-    </div>
-  </section>
-</a>
+<ExternalLink
+  href="https://twimlai.com/twiml-talk-295-managing-deep-learning-experiments-with-lukas-biewald/"
+  title="Managing Deep Learning Experiments with Lukas Biewald — Talk #295"
+  description="Today we are joined by Lukas Biewald, CEO and Co-Founder of Weights & Biases. Lukas, previously CEO and Founder of…"
+  name="twimlai.com"
+  picture="/uploads/images/2019-11-05/managing-deep-learning-experiments.jpeg" 
+/>
 
 <hr />
 
